--- a/ParamBase/ParamBase.csproj
+++ b/ParamBase/ParamBase.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E9972C6-76C2-42D5-9203-77C6E4B24608}</ProjectGuid>
+    <ProjectGuid>{0A0271B2-ED36-4ACF-A8E8-A9611AE595A0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LogBase</RootNamespace>
-    <AssemblyName>LogBase</AssemblyName>
+    <RootNamespace>ParamBase</RootNamespace>
+    <AssemblyName>ParamBase</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -44,10 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeviceLogBase.cs" />
-    <Compile Include="LogBase.cs" />
+    <Compile Include="ParaBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeWriterLabel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
