--- a/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
+++ b/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -59,6 +60,9 @@
     <Compile Include="FormAnalysisResult.Designer.cs">
       <DependentUpon>FormAnalysisResult.cs</DependentUpon>
     </Compile>
+    <Compile Include="Log\LogKind.cs" />
+    <Compile Include="MainProcess.cs" />
+    <Compile Include="Param\ParaFormMain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAutoDiscrimation.resx">
@@ -93,6 +97,14 @@
     <ProjectReference Include="..\CameraControl\CameraControl.csproj">
       <Project>{356be3c9-bbb4-454d-9bd7-71f10f5b1dc6}</Project>
       <Name>CameraControl</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LogBase\LogBase.csproj">
+      <Project>{7e9972c6-76c2-42d5-9203-77c6e4b24608}</Project>
+      <Name>LogBase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ParamBase\ParamBase.csproj">
+      <Project>{0a0271b2-ed36-4acf-a8e8-a9611ae595a0}</Project>
+      <Name>ParamBase</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
