--- a/ImageMatrox/ImageMatrox.csproj
+++ b/ImageMatrox/ImageMatrox.csproj
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,7 +35,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
+    <OutputPath>..\Manege_of_AutoDiscrimation\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
@@ -75,6 +76,15 @@
     <Compile Include="MatroxImageProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleInspection.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ImageMatrox.def" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MilControl\MilControl.csproj">
+      <Project>{e22bc9d4-901e-4a9a-ad37-29fc946a5887}</Project>
+      <Name>MilControl</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
