dll参照方法変更/Size・rect構造体の仕様を変更

--- a/CameraControl/CameraControl.csproj
+++ b/CameraControl/CameraControl.csproj
@@ -52,6 +52,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ImageMatrox, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Manege_of_AutoDiscrimation\bin\Debug\ImageMatrox.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
