--- a/ImageMatrox/ImageMatrox.csproj
+++ b/ImageMatrox/ImageMatrox.csproj
@@ -59,6 +59,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -76,9 +77,6 @@
     <Compile Include="MatroxImageProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleInspection.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ImageMatrox.def" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MilControl\MilControl.csproj">
