--- a/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
+++ b/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -28,14 +28,14 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
@@ -45,7 +45,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -58,6 +58,11 @@
     <Reference Include="ImageMatrox, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\ImageMatrox.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="SPCommonSocket">
+      <HintPath>..\bin\Debug\Library\SPCommonSocket.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -90,6 +95,7 @@
     <Compile Include="Param\ParaFormMain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketCommunication.cs" />
     <EmbeddedResource Include="FormAutoDiscrimation.resx">
       <DependentUpon>FormAutoDiscrimation.cs</DependentUpon>
     </EmbeddedResource>
@@ -122,14 +128,17 @@
     <ProjectReference Include="..\CameraControl\CameraControl.csproj">
       <Project>{356be3c9-bbb4-454d-9bd7-71f10f5b1dc6}</Project>
       <Name>CameraControl</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\LogBase\LogBase.csproj">
       <Project>{7e9972c6-76c2-42d5-9203-77c6e4b24608}</Project>
       <Name>LogBase</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\ParamBase\ParamBase.csproj">
       <Project>{0a0271b2-ed36-4acf-a8e8-a9611ae595a0}</Project>
       <Name>ParamBase</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
