--- a/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
+++ b/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
@@ -84,23 +84,15 @@
     <Compile Include="FormAutoDiscrimation.Designer.cs">
       <DependentUpon>FormAutoDiscrimation.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormAnalysisResult.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormAnalysisResult.Designer.cs">
-      <DependentUpon>FormAnalysisResult.cs</DependentUpon>
-    </Compile>
     <Compile Include="Log\LogKind.cs" />
     <Compile Include="MainProcess.cs" />
+    <Compile Include="Parameter.cs" />
     <Compile Include="Param\ParaFormMain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketCommunication.cs" />
     <EmbeddedResource Include="FormAutoDiscrimation.resx">
       <DependentUpon>FormAutoDiscrimation.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormAnalysisResult.resx">
-      <DependentUpon>FormAnalysisResult.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
