--- a/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
+++ b/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
@@ -55,6 +55,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CCSLightController">
+      <HintPath>..\bin\Debug\Library\CCSLightController.dll</HintPath>
+    </Reference>
     <Reference Include="ImageMatrox, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\ImageMatrox.dll</HintPath>
