--- a/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
+++ b/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
@@ -87,6 +87,12 @@
     <Compile Include="FormAutoDiscrimation.Designer.cs">
       <DependentUpon>FormAutoDiscrimation.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormConditionSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormConditionSetting.designer.cs">
+      <DependentUpon>FormConditionSetting.cs</DependentUpon>
+    </Compile>
     <Compile Include="Log\LogKind.cs" />
     <Compile Include="MainProcess.cs" />
     <Compile Include="Parameter.cs" />
@@ -96,6 +102,9 @@
     <Compile Include="SocketCommunication.cs" />
     <EmbeddedResource Include="FormAutoDiscrimation.resx">
       <DependentUpon>FormAutoDiscrimation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormConditionSetting.resx">
+      <DependentUpon>FormConditionSetting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
