--- a/ImageMatrox/ImageMatrox.csproj
+++ b/ImageMatrox/ImageMatrox.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Reference Include="Matrox.MatroxImagingLibrary">
       <HintPath>..\..\..\..\..\..\Program Files\Matrox Imaging\MIL\MIL.NET\Matrox.MatroxImagingLibrary.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
