豊川展示ルーム仕様に変更 説明書追加

--- a/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
+++ b/Manege_of_AutoDiscrimation/Manege_of_AutoDiscrimation.csproj
@@ -169,5 +169,11 @@
   <ItemGroup>
     <None Include="Resources\win.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Good.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NextChallenge.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
